# api_trabalho_graduacao

./: .gitignore  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
Docker/: Dockerfile
tg_api/domain/: queries.py
tg_api/infrastructure/: database.py  redis.py
tg_api/infrastructure/repository/: cache_repository.py  queries_repository.py  raw_queries.py
tg_api/presentation/: api.py  dependencies.py
tg_api/presentation/routes/: cached_routes.py  redis_routes.py  routes.py  ttl_routes.py
